2005/11/22
.bug fix for term binding
.add test for minimum adl
.set dependency to kernel-1.2.4

2006/03/26
.dependency to the latest kernel-1.2.5-SNAPSHOT
.updated archetype description
.updated archetype ontology 

2006/03/29
.added support for assumed values

2006/04/08
.adjusted object path syntax
.updated some unit tests
.added support for C_QUANTITY
.removed C_COUNT syntax
.added a directory based parsing for convenient testing 